Adicionando mais notas

--- a/Banco de Dados/4. Mapeamento do Modelo ER para o Modelo Relacional.md
+++ b/Banco de Dados/4. Mapeamento do Modelo ER para o Modelo Relacional.md
@@ -1,6 +1,13 @@
 Nas tabelas, toda entidade deve ter uma chave, e se houver um relacionamento com outra tabela, é criada uma coluna na tabela que recebe a chave da outra tabela
 ![[Pasted image 20250429140903.png]]
 
+# Restrições
+- **Restrição de Domínio:**
+	![[Pasted image 20250510154302.png]]
+- **Restrição de integridade de Entidade:**
+	Não pode existir duas chaves primárias iguais em uma tabela
+- **Restrição de Integridade Referencial:**
+	O valor de uma chave estrangeira deve ser igual ao valor de alguma chave primária em outra tabela.
 # Relacionar o Modelo ER com o Modelo Relacinal
 ## Relacionamento
 O Relacionamento pode ser uma tabela inteira só pra ele ou pode ser uma coluna de uma tabela. Basicamente a pergunta é, em qual tabela a Chave Estrangeira (FK) vai ficar.
@@ -12,9 +19,9 @@ Isso dependerá da Cardinalidade e da participação
 	![[Pasted image 20250429144403.png]]
 
 **Parcial:**
-	Nesse caso, a chave deve ficar em uma das tabelas. Normalmente na tabela que dependente.
-	![[Pasted image 20250429144906.png]]
+	Nesse caso, a chave sempre deve ficar na tabela que se relaciona de forma total.	![[Pasted image 20250429144906.png]]
 	![[Pasted image 20250429144915.png]]
+
 ### Relacionamento 1:N/N:1
 A Chave Estrangeira (FK) fica na entidade que se relaciona uma unicamente.
 ![[Pasted image 20250429145348.png]]
@@ -22,6 +29,17 @@ A Chave Estrangeira (FK) fica na entidade que se relaciona uma unicamente.
 ### Relacionamento N:N
 Nesse modelo, cria-se uma 3º tabela que conecta as chaves de dois atributos.
 ![[Pasted image 20250429150708.png]]
+
+## Relacionamentos especiais
+### Recursivo
+Cria-se uma **FK** que recebe da própria tabela com o nome do relacionamento
+![[Pasted image 20250512104611.png]]
+### Relacionamento com atributos
+Quando um relacionamento tiver um atributo e for um **[[#Relacionamento 1 1]] total** ou um **[[#Relacionamento N N]]**, cria-se uma tabela para o relacionamento que possui como PK e FK as chaves dos atributos ao qual ela relaciona.
+![[Pasted image 20250510163952.png]]
+
+Agora, se for um **[[#Relacionamento 1 1]] parcial** ou um **[[#Relacionamento 1 N/N 1]]** acrescenta a **FK e o atributo** do relacionamento na tabela dependente
+![[Pasted image 20250512104429.png]]
 
 ## Atributos
 Cada Entidade vai gerar uma tabela em que cada atributo será uma coluna
@@ -33,11 +51,18 @@ Os atributos compostos não são retratados na tabela, apenas os atributos que f
 No modelo clássico, cada entidade só pode ter um valor para cada atributo. Então para existir Atributos Multivalorados, cria-se uma tabela exclusivamente para ela. Neste modelo, a chave da entidade se torna uma Chave estrangeira para o Atributo multivalorado.
 Toda **Chave Estrangeira (FK)** deve ser ligada a uma **Chave Primaria (PK)**
 ![[Pasted image 20250429142751.png]]
+**Exemplo:**
+	![[Pasted image 20250510163703.png]]
 
-### Entidade Fraca
-A entidade fraca no modelo relacional precisa ser obrigatoriamente ligado a outra entidade. Além de que ela precisa ter uma Chave principal (PK), que é a chave da entidade a qual ela depende, e uma chave Estrangeira (FK).
+# Entidade especiais
+Toda entidade deve possuir uma **Chave Primária (PK)**. 
+	![[Pasted image 20250510163554.png]]
+
+## Entidade Fraca
+A entidade fraca no modelo relacional precisa ser obrigatoriamente ligado a outra entidade. Esse entidade possuirá uma chave composta pela **Chave principal (PK)** da própria entidade e uma **Chave estrangeira e principal (PK)(FK)** da entidade ao qual ela depende.
 ![[Pasted image 20250429143537.png]]
-
+**Exemplo:**
+![[Pasted image 20250510164229.png]]
 ## Exemplo Modelo Relacional
 **Modelo ER:**
 ![[Pasted image 20250506141953.png]]
