--- a/Banco de Dados/5. SQL.md
+++ b/Banco de Dados/5. SQL.md
@@ -1,9 +1,10 @@
 # Linguagem SQL
-**DDL:** Estrutura do banco de dado. Adicionar tabela, gerenciar tabela, gerenciar estrutura da tabela.
+## **DDL:** 
+Estrutura do banco de dado. Adicionar tabela, gerenciar tabela, gerenciar estrutura da tabela.
 **Comandos:**
 - Create: Criar
 	```
-	CREATE databese (Objeto) nome_banco (nome do  objeto );
+	CREATE TABLE nome_banco; // CREATE (objeto) (nome do objeto)
 		(Coluna   tipo    [constrant coluna],
 		...
 		...
@@ -33,14 +34,147 @@
 | BLOB          | Valores de caracteres de comprimento variável até 2GB |
 | LOGBLOB0      | Caractere de comprimento variável para dados binários |
 **Constraints:**
-- Constraint no nível de coluna:
+**NOT NULL**: Coluna não pode estar nulo no banco de dados
+**UNIQUe**: Não pode ter duas pessoas com um mesmo valor
+**PRIMARY KEY**
+**FOREIGN KEY**
+**CHECK**: Verificação de nominios, por exemplo, uma pessoa só pode ser casada ou solteira ou viuva.
+
+Como escrever constraints:
+- **Constraint no nível de coluna:**
 	```
 	coluna [CONSTRAINT nome_constraint]
 	tipo_constraint,
 	```
-- COnstraint no nível de tabela:
+- **Constraint no nível de tabela:**
 	```
 	coluna, ...
 	[CONSTRAINT nome_constraint] tipo_constraint
 	(coluna,...),
 	```
+
+**Exemplo:**
+	![[Pasted image 20250513093321.png]]
+
+## **DML**
+Comandos usados para colocar dados no banco de dados.
+
+**Obs.:** No SQL, as informações dentro dos colchetes é opcional
+
+**Comandos:**
+- INSERT: Insere dados em uma tabela do banco de dados
+	```
+	INSERT INTO tabela [colunas]
+	VALUES (valores);
+	```
+	Apenas uma linha é inserida por vez.
+	**Exemplo:**
+	```
+	inserte into Aluno [matricula, nome]
+	value ['xxx', 'Fulano']
+	```
+- UPDATE:
+	```
+	UPDATE tabela
+	SET coluna = valor [, coluna=valor]
+	[WHERE condição];
+	```
+- DELETE: Se tetnar deletar uma linha que tem uma chave primaria que é usada como chave estrangeira em outra tabela, dará um erro de integridade.
+	```
+	DELETE [FROM] tabela
+	[WHERE         condição]
+	```
+	**Exemplo:**
+	```
+	delete Aluno // Deleta todas as ocorrencias de aluno.
+	```
+- SELECT: Consultar dados no banco de dados
+	```
+	SELECT [DISTINCT] (*, coluna [alias]) // O Distinct serve para dados distitos
+	FROM tabela
+	[WHERE condição]
+	[ORDER BY {coluna, exp} [ASC|desc]]; // Forma de ordenação
+	```
+
+**Comparadores e Operadores Logicos:**
+- **Operadores lógicos de comparação:**
+	``` 
+	=
+	> 
+	>=
+	<
+	<=
+	```
+- **Opradores de comparação SQL:**
+	IN (lista)
+	LIKE
+	IS NULL
+- **Operadores lógicos:**
+	AND
+	OR
+	NOT
+
+### Select
+Executa consultas no Banco de Dados
+
+```
+SELECT [DISTINCT] (*, coluna [alias]) // O Distinct serve para dados distitos
+FROM tabela
+[WHERE condição]
+[ORDER BY {coluna, exp} [ASC|desc]]; // Forma de ordenação
+```
+
+**Produto Cartesiano:** Mistura cada linha de uma tabela com todas as linhas da segunda tabela.
+**Exemplo:**
+	![[Pasted image 20250520141657.png]]
+	```
+	SELECT *
+	FROM tab1, tab2
+	```
+	![[Pasted image 20250520141820.png]]
+
+Para que nesse exemplo, usa-se o where para puxar apenas o valor do código
+```
+SELECT *
+FROM tab1, tab2
+
+(X) WHERE CoDe = CoDe // Errado, nesse caso o SGBD não vai identificar de onde vem esse CoDe
+
+WHERE funcionario.CoDe = departamento.CoDe
+```
+![[Pasted image 20250520142420.png]]
+
+**Join:**
+```
+SELECT *
+FROM tabela1 INNER JOIN tabela2 ON tabela1.id=tabela2.id  //Juntar dados da tabela1 com a tabela2
+
+FROM tabela1 LEFT JOIN tabela2 ON tabela1.id=tabela2.id  //Junta dados da tabela1 com a tabela2, independente se tem ou não ligação.
+
+```
+```
+SELECT *
+FROM tabela1, tabela2, tabela3
+WHERE tabela1.coluna1=tabela2.coluna2 AND tabela1.coluna1=tabela3.coluna1
+```
+
+**FUnções de Grupo:** 
+AVG -> média
+COUNT -> contador
+MAX -> máximo
+```
+SELECT coluna,
+FROM tabela
+[WHERE condição]
+[GROUP BY expressão]
+[HAVING condição do grupo]
+[ORDER BY]
+```
+
+**Subqueries:** Quando faz uma consulta dentro da outra. Deve estar sempre entre parenteses
+```
+SELECT lista_select
+FROM tabela
+WHERE expressão operador
+	(SELECT)
+```
