--- a/Introdução a Inteligência Artificial/5. Redes Neurais.md
+++ b/Introdução a Inteligência Artificial/5. Redes Neurais.md
@@ -69,7 +69,7 @@ Neste modelo, adota-se a função **Degrau Simétrico**
 Treinar a rede para reconhecer branco e preto
 - **Codificar as entradas:**
 	![[Pasted image 20250430150316.png]]
-- **Definir parametros:** Taxa de aprendizagem = 0,2, Delta ($\theta$) = 0, saída 0 = 0,4, saída 1 = -0,8, saída 2 = 0,3
+- **Definir parametros:** Taxa de aprendizagem = 0,2, Delta ($\theta$) = 0, peso 0 = 0,4, peso 1 = -0,8, peso 2 = 0,3
 	![[Pasted image 20250430150549.png]]
 
 ![[Pasted image 20250430153009.png]]
