--- a/Sistemas da Informação/3. Processos de Requisitos.md
+++ b/Sistemas da Informação/3. Processos de Requisitos.md
@@ -81,6 +81,7 @@ Técnicas
 	Identificar onde os problemas irão afetar.
 
 # [[#Iniciação]]
+Definir o [[#Escopo]] e ver se é um projeto viável.
 A ideia é dar uma visão do projeto e verificar a viabilidade do projeto. Graças a essa etapa, garante-se:
 - Quanto tempo o projeto vai demorar
 - O rumo que o projeto deve seguir
@@ -89,9 +90,9 @@ A ideia é dar uma visão do projeto e verificar a viabilidade do projeto. Graç
 ![[Pasted image 20250506114230.png]]
 
 Ao final desta etapa, entrega-se:
-- **A proposta do projeto:** Quais as vantagens que serão entregues aos stakeholders.
-- **O escopo do projeto:** A parte do mundo que será auxiliada ou melhorada por meio do projeto.
-- **Quem são os Stakeholders:** As pessoas interessadas ou que serão afetadas pelo produto.
+- **A proposta do projeto(objetivos):** Quais as vantagens que serão entregues aos stakeholders.
+- **O escopo do projeto(Escopo):** A parte do mundo que será auxiliada ou melhorada por meio do projeto.
+- **Quem são os Stakeholders(Stakeholders):** As pessoas interessadas ou que serão afetadas pelo produto.
 
 Além disso, podem ser feitas entregas adicionais nessa etapa:
 - **Restrições:** Linguagens de implementação, restrições de cenários.
@@ -187,3 +188,134 @@ Essa identificação de riscos e restrições pode ser feita por meio da Identif
 	Obj.: Envio de ambulância em 14 minutos
 	Risco: Prover uma respostas em 14 minutos
 
+# [[#Investigação]]
+Não se veve fazer as seguintes perguntas:
+- O que quer?
+- Quais os requistos:
+- O que deseja que o software faça?
+- Quais os objetivos?
+
+Essa é uma etapa de **exploração e descoberta de requisitos**.
+
+Para se descobrir isso, adota-se um sistema de busca de necessidades explicitas ou implícitas.
+- **Necessidades explicitas**: A partir do que o usuario deseja, o objetivo é identificar a situação problemática.
+- **Necessidade oculta**: São necessidades que o stakeholder não vê como uma necessidade no momento, seja por estar subentendida por parte do stakeholder ou não tenha sido ainda identificada.
+
+**Condições para elucidação de efeitos:**
+- Identificar os stakeholders certos
+- Ter o comprometimento do stakeholder
+- Analisar habilidades:
+	Identificar habilidades interpessoais
+	Escutar (processar a informação) e observar as habilidades
+	Identificar habilidades abstratas: Informações importantes que não formam ditas pelo cliente mas que podem estar presentes em outros documentos;
+	Reformular as habilidades em linguagem natural.
+
+**Dificuldades de investigação:**
+1. **Acesso a informação**
+	1. Pessoas chaves muito ocupadas ou não interessadas:
+	2. Foi aprovado o projeto mas os stakeholders tem ideias diferentes do projeto e não dá para agradar a todos:
+		A melhor solução é identificar os stakeholders mais importantes por meio do modelo em cebola.
+	3. As regras espalhadas em varios lugares diferentes, nuvem, documentos fisicos, dispositivos físicos distintos.
+		Nesse caso vai ser necessário a ajudar dos stakeholders para identificar todos os documentos e organiza-los.
+2. **Conflito de informações**
+	1. Existem vários departamentos e filiais, e não está claro se todas as filiais adotam o mesmo processo e estão padronizadas:
+		Observar as filiais sãos mais importantes para a realização do projeto e identificar quais são as que seguem o padrão e quais não seguem.
+3. **Conhecimento tático e oculto**
+	1. Conhecimento tático é o conhecimento já conhecido e bem compreendido, expresso de forma clara mas que não está claro para a equipe de desenvolvimento do projeto.
+	2. Conhecimento oculto é o conhecimento que é compreendido mas não é explicado. Aquele conhecimento que é subentendido ou que é compreendido como obvio e não explicado.
+4. Poder e Politica
+	1. Pessoas querem projetos que sirvam seus interesses
+	2. Pode ser um ponto de tensão entre diferentes grupos
+	3. Alguns stakeholders podem sair ou estar insuficientemente envolvidos.
+5. Lidar com mudanças
+	1. As necessidades dos stakeholders podem mudar
+	2. O contexto pode mudar
+	3. Estrutura organizacional pode mudar
+
+**Tecnicas de investigação:**
+1. **Estudo de Background:**
+	- Ler documentação, reports, papeis sobre saida relatods de sistema
+	- Verificar qual a estrutura da organização, domínio da aplicação e sistema adotado.
+2. **Beneficios e dificuldades:**
+	- Identificar informações básicas sobre a organização e sobre a aplicação para diminuir o tempo das entrevistas.
+	- Contudo pode ter como dificuldades, documentos desatualizados e espalhados em diferentes meios
+3. **Coleta de dados:**
+	1. Identificar artefatos, informações, gravações, emails, ligações telefônicas gravadas.
+	Isso contribui com o processo de identificar requisitos e stakeholders relevantes.
+	Interpretar dados corretamente e obter dados representativos são dificuldades dessa tecnica.
+4. **Entrevista:**
+	1. Fazer entrevistas com duas ou mais pessoas para esclarecer ou validar informações a cerca do que já tenha sido encostrado, ou identificar novos requisitos e contextos.
+	2. Seguir abordadas de estudos qualitativos, tal qual as abordagens adotas das ciências sociais.
+	Nessa etapa de entrevistas deve haver o processo de preparo, condução da entrevista e validação da entrevista.
+	Como vantagens, pode identificar informações relevantes que estavam escondidas ou subentendidas.
+5. **Workshops:**
+	Reunião em grupo em que é apresentado um tema já previamente planejado e os membros devem discutir sobre esse projeto. **Todo** workshop tem que ter resultados.
+	É um processo de conhecimento estruturado selecionando os stakeholders para facilitar o trabalho colaborativos e refinar as especificações.
+7. **Prototipação:**
+	Prototipar um esboço básico sobre o projeto para apresentar algo palpável aos stakeholders. É o mais adequado para fazer inferencia.
+8. **Observação:**
+	Observar de forma passiva ou ativa. É o mais adequado para fazer deduções.
+9. **Analisar os Feedbacks dos usuarios**
+
+# [[#Decisões]]
+Identificar features candidatas para a nova versão e quais qualidade essas features devem trazer. Devem estimar o impacto dessas features e as qualidades aos objetivos dos stakeholders. Finalmente, decidir quais features e qualidades serão desenvolvidas.
+
+**Entrada:**
+	Objetivos do projeto, escopo e Stakeholders
+	Issues, ideias, inspirações e oportunidades.
+**Resultado:**
+	Features candidatas para implementação, priorizadas pelo custo e impactos nos objetivos do projeto.
+
+## **Feature:**
+Deve ser uma uma qualidade visível (o usuário deve conseguir ver) que contribua para o objetivo ou uma funcionalidade.
+Deve ser externo a maquina, mas dentro do work.
+Deve existir uma forma de mensurar a Feature, e essa forma é através do requisito.
+
+**Dificuldades comuns em projetos de Software:**
+	Deve estar bem definidas quais são os stakeholders. Se as features não foram bem definidas, isso gerará dificuldade no projeto
+	Falta de Escopo, adicionando novas features sem terem sido bem adequadas ao work.
+	Falta de estrutura e compreensão dos requisitos.
+
+## Tecnicas
+**Impact Mapping:**
+	Deve gerar:
+	- **Objetivos:** Porque a features deve existir.
+	- **Atores:** Quem vai ser afetado pelo projeto e quem pode contribuir para os objetivos do projeto.
+	- **Impacto:** Como perceber se a feature alcançou o seu objetivo. Formas de medir.
+	- **Entregavel:** O que deve ser entregue.
+
+**User Story Map:**
+	É uma stório curta da descrição das funcionalidades. É preenchido uma cartilha informando a historia.
+	A história de usuário não é um requisito, mas pode ser usada para identificar os requisitos.
+
+**Goal Modelling:**
+	A ideia é expressar os objetivos dos stakeholders como uma chaves para abstrair e elucidar a analise dos requisitos.
+	A ideia é hierarquizar os objetivos, dividindo-o em subobjetivos. O subobjetivo deve contribuir para o objetivo pai e a feature contribui com o objetivo.
+
+## Goal Modeling
+A ideia é abstrair os objetivos dos Stakeholders. Para modelar, pode ser usado o **KAOS** (usado no curso).
+
+**Exemplo de Goal Modeling:**
+	![[Pasted image 20250529103931.png]]
+	Nesse exempo, o Goal é ***Airplane Safety***, as sub-goals são as demais notas que vão aos poucos concretizando a Goal e a feature é o **Ground Braking Safety Feature***, que é algo concreto que de fato dá para ser implementado.
+
+Nesse modelo, a implementação pode ser feita Top-down (de Goal até chegar nas features) ou Botton-Up (já sabendo as features, tenta encontrar a goal).
+
+### Goal Patterns
+É uma sentença estruturada que pode ser usada para expressar uma variedade de objetivos concretos, requisitos ou pressuposição.
+
+Para usar esse modelo, usa-se os termos,
+- **Given** (estado inicial)
+- **When** (evento gatilho)
+- **Then** (Resultados com limites de tempo especificos)
+
+**Exemplo:**
+	![[Pasted image 20250529110323.png]]
+
+Assim, para a modelagem no **KAOS**, é recomendado que nos Goals, escreva-se o objetivo e quais as assertivas.
+
+Essas assertivas podem ser usadas tanto no que visa-se evitar quanto no que visa-se alcançar.
+
+O **KAOS** adota principalmente uma ideia de logica proposicional.
+
+# [[#Formulação]]
