--- a/Sistemas da Informação/3.1 Diagrama de Contexto.md
+++ b/Sistemas da Informação/3.1 Diagrama de Contexto.md
@@ -1,11 +1,12 @@
 # Sistema de alertas de inundações
-Desenhe um esquema para um sistema automatizado de alerta de inundações
-**Proposito:** Alertar a população e o serviço de emergencia sobre o risco de inundação com pelo menos duas horas de antecedencia.
-**Inputs:** 
-	Sensores que verificam o nivel pluvial da região
-	Sensores que medem a altura dos rios e velocidades dos dois principais rios que atravessam a região.
-
-O usuario da AWFS foi desenvolvido por um hydrologista. O model pode preddizar com até 2 horas de antecedencia quais areas serão inundadas, desde que as leituras seja precisas com pelo menos 90% de confiabilidade das precipitações
-O sistema vai enviar alertas de emerfencia pela rede telefonica
-O sistema também deve enviar o alerta por sistema de TV a Cabo
-As pessoas podem registrar que receberam os alertas por texto.
+Desenhe um esquema para um sistema automatizado de alerta de inundações (AWFS)
+O sistema será implantado em uma região do Reino Unido recentemente afetada por inundações.
+O objetivo do sistema é alertar a população e os serviços de emergência sobre o risco de inundação
+com pelo menos duas horas de antecedência.
+O sistema recebe dados de entrada de:
+- um conjunto de sensores de precipitação que medem os níveis de chuva em diversos locais, e
+- um conjunto de sensores fluviais que medem a altura e a velocidade dos rios em vários pontos ao longo dos dois principais rios que atravessam a região.
+O AFWS utiliza um modelo de previsão de inundações desenvolvido por hidrólogos. Esse modelo é capaz de prever, com mais de duas horas de antecedência, quais áreas (por exemplo, vilarejos) serão inundadas, desde que receba leituras precisas de pelo menos 90% dos sensores de precipitação e dos sensores fluviais.
+O sistema enviará alertas de inundação para os serviços de emergência das áreas afetadas por meio da rede telefônica.
+O sistema também irá sobrepor a programação de redes de TV a cabo para transmitir alertas à população.
+As pessoas também poderão se cadastrar para receber alertas de inundação por mensagens de texto.
