--- a/Banco de Dados/5. SQL.md
+++ b/Banco de Dados/5. SQL.md
@@ -86,7 +86,7 @@ Comandos usados para colocar dados no banco de dados.
 	```
 	**Exemplo:**
 	```
-	delete Aluno // Deleta todas as ocorrencias de aluno.
+	delete from Aluno // Deleta todas as ocorrencias de aluno.
 	```
 - SELECT: Consultar dados no banco de dados
 	```
@@ -118,7 +118,7 @@ Comandos usados para colocar dados no banco de dados.
 Executa consultas no Banco de Dados
 
 ```
-SELECT [DISTINCT] (*, coluna [alias]) // O Distinct serve para dados distitos
+SELECT [DISTINCT] colunas,... // O Distinct serve para dados distitos
 FROM tabela
 [WHERE condição]
 [ORDER BY {coluna, exp} [ASC|desc]]; // Forma de ordenação
@@ -158,10 +158,11 @@ FROM tabela1, tabela2, tabela3
 WHERE tabela1.coluna1=tabela2.coluna2 AND tabela1.coluna1=tabela3.coluna1
 ```
 
-**FUnções de Grupo:** 
+**Funções de Grupo:** 
 AVG -> média
 COUNT -> contador
 MAX -> máximo
+MIN -> minimo
 ```
 SELECT coluna,
 FROM tabela
@@ -170,11 +171,83 @@ FROM tabela
 [HAVING condição do grupo]
 [ORDER BY]
 ```
+**Exemplo Group by:**
+	![[Pasted image 20250603162757.png]]
+	![[Pasted image 20250603162820.png]]
 
-**Subqueries:** Quando faz uma consulta dentro da outra. Deve estar sempre entre parenteses
+**Exemplo Having:**
+	![[Pasted image 20250603162952.png]]
+	![[Pasted image 20250603163019.png]]
+
+**Exemplo Order by:**
+	![[Pasted image 20250603163120.png]]
+	![[Pasted image 20250603163137.png]]
+
+**Subqueries:** Quando faz uma consulta dentro da outra. Deve estar sempre entre parenteses e deve aparece no lado direito do operador.
 ```
 SELECT lista_select
 FROM tabela
 WHERE expressão operador
-	(SELECT)
+	(SELECT ...
+	FROM ...
+	WHERE ...)
+	
+```
+
+## Novos comandos
+**Auto-numeração:** Utilizada para criar um identificador automático para um determinada coluna.
+```
+**CREATE TABLE ESPECIALIDADE (id int(11) AUTO_INCREMENT, nome varchar(20) NOT NULL, PRIMARY KEY(id));**
+```
+
+**Views (visões):** tabelas virtuais criadas a partir de um SELECT. Útil para limitar a visão do usuário, para evitar dar mais dados do que o necessário. Ele também pode ser utilizado para criar uma tabela virtual de mais de uma tabela que estejam conectadas por Foreign Keys.
+```
+CREATE VIEW nomeDaVisao AS SELECT ...
+	[FROM tb.Aluno a, tb.historico h, tb.disciplina d, (h.nota1 + h.nota2 + h.nota3) mencao
+	WHERE a.matricula = h.matricula AND h.cod_disc = d.cod_disc];
+```
+
+**Stored Procedures:** Programas que podem ser armazenados no SGBD.
+```
+CREATE PROCEDURE procedure_name ([parametros, ...])
+[BEGIN]
+	corpo_da_rotina;
+[END]
+```
+
+**Triggers (Gatilhos):** São objetos de banco de dados associados a uma tabela, definidos para serem disparados e responderem a um evento particular (Comandos da DLM). São comandos automáticos realizados que acontecem após um dado evento em uma tabela. Se uma tabela for alterada (Update, Delete, Insert, Select), isso gera um evento que pode alterar outra tabela.
+
+```
+CREATE TRIGGER trigger_name trigger_timer(BEFORE, AFTER) trigger_event ON tbl_name FOR EACH ROW trigger_stmt
+[BEGIN]
+	corpo_da_rotina;
+[END]
+```
+**Ex.:**
+```
+CREATE TRIGGER Exemplo_trigger AFTER UPDATE ON FUNCIONARIO FOR EACH ROW
+BEGIN
+	IF (NEW.NOME IS NOT NULL) THEN
+		INSERT INTO Funcionario_auditoria
+			VALUES (NEW.nome, OLD.nome)
+	END IF;
+END;
+```
+
+**Cursores:** São objetos que armazenam um conjunto de registros. Uma especie de ponteiro do resultado de um select
+	Passos:
+	- Declarar (declare)
+	- abrir (Open)
+	- Pegar os dados (fetch)
+	- Fechar (Close)
+**Ex.:**
+```
+DECLARE cur1 CURSOR FOR SELECT nome FROM funcionario;
+
+OPEN cur1;
+	REPEAT
+	FETCH cur1 INTO a;
+		select a;
+	UNTIL film END REPEAT;
+	CLOSE curl1;
 ```
