--- a/Sistemas da Informação/3. Processos de Requisitos.md
+++ b/Sistemas da Informação/3. Processos de Requisitos.md
@@ -319,3 +319,44 @@ Essas assertivas podem ser usadas tanto no que visa-se evitar quanto no que visa
 O **KAOS** adota principalmente uma ideia de logica proposicional.
 
 # [[#Formulação]]
+Encontradas as features nas etapas anteriores,  adotam-se o incremento dessas features no projeto por meio de:
+- **Just-in-time:** pequenos incrementos, antes e durante a codificação.
+- **Upfront:** Múltiplas features definidas e analisadas em conjunto depois da codificação;
+
+Para esses incrementos, adotam-se algumas tecnicas como:
+- Especificação por exemplos;
+- Requisitos padrões
+- Especificação de requisitos orientada a objetivos
+- Especificações formais.
+
+## Especificação por Exemplos
+Adotam-se cenários de exemplos de como uma determinada feature funcionará.
+
+Nesse modelo, a **Goal** - contribui -> **Feature** - define -> **Requisito** - ilustra -> **Exemplos**
+
+**Exemplo:**
+	**Feature:** Features de ativação de segurança de spoilers
+	**Objetivo:**
+		- Avoid (Ativa o sistema de spoilers quando tiver voando)
+		- Maintain (Ativa o sistema de spoilers quando tiver toca o chão)
+	**Regra:**
+		O sistema de spoilers é ativo se  e apenas se uma das duas seguinte condições forem satisfeitas:
+		1. O amortecedor a oelo estiver comprimido e ambos os lados.
+		2. A velocidade da roda tiver em pelo menos 72 kts em ambos os lados.
+	**Exemplo:**
+
+
+- **Um exemplo deve te 3 etapas**
+	**Contexto (Given):** O estado do maquina
+	**Ação (When):** A ação que irá resultar nas mudanças de estado
+	**Saída (Then):** Ação resultante.
+
+**Cenario de Feature vs Cenario dominio**
+- **Feature scenario:** Um exemplo que ilustra um requisito de maquina
+	Usados para descobrir o significado das features e definir critérios de aceitação para o comportamento da feature.
+	A goal scenario vai ser comporto por um conjunto de Feature scenario.
+- **Domain Scenario:** Uma sequencia de Eventos do mundo que ilutra as satisfações ou violações de um objetivo do Stakeholder. É o que caracteriza o Work.
+	Para ilustrar como múltiplos agentes devem interagir com múltiplas features para satisfazer o mesmo objetivo.
+
+## Observação
+![[Pasted image 20250605112410.png]]
