--- a/Introdução a Inteligência Artificial/9. Logica Proposicional.md
+++ b/Introdução a Inteligência Artificial/9. Logica Proposicional.md
@@ -30,3 +30,33 @@ Cada movimento que o agente fizer, ele vai sentir uma percepção e a partir dis
 Este modelo é de um **Agente baseado em Busca**. É eficiente na solução de problemas formalizados, com estado inicial e com um conjunto de estados finitos.
 Contudo, não resolvem problemas que exigem raciocínio baseado em conhecimentos do mundo.
 
+#### Metaregra
+São regras gerais criadas pelo ser humano por meio de proposições lógicas
+- **Modus Ponens:** $\frac{\alpha => \beta, \alpha}{\beta}$ (Se $\alpha$ implica em $\beta$ e $\alpha$ é verdadeira, então $\beta$ é verdadeira)
+- **E-eliminação:** $\frac{\alpha 1 \wedge \alpha 2 \wedge ... \wedge \alpha n}{\alpha i}$ (Se $\alpha 1$ e $\alpha 2$ e ... e $\alpha n$ é verdade, então $\alpha i$ é verdade)
+- **Resolução Unidade:** $\frac{\alpha \vee \beta, ¬\beta}{\alpha}$ (Se $\alpha  \vee  \beta$ é verdade e $¬\beta$ também é verdade, então $\alpha$ é verdade)
+#### Base de conhecimento
+Sentenças que representam a percepção do agente
+**Exemplo Wumpus:**
+	Informações conhecidas
+	![[Pasted image 20250604141926.png]]
+	![[Pasted image 20250604142127.png]]
+	**BC:**
+		Fatos: ¬f(1,1), ¬b(1,1), ¬f(2,1), b(2,1), f(1,2), ¬b(1,2)
+		Regra 1: ¬f(1,1) => ¬W(1,1) $\wedge$ ¬W(1,2) $\wedge$ ¬W(2,1)
+		Regra 2: ¬f(2,1) => ¬W(1,1) $\wedge$ ¬W(2,1) $\wedge$ ¬W(2,2) $\wedge$ ¬W(3,1)
+		Regra 3:  f(1,2) => W(1,3) $\vee$ W(1,2) $\vee$ W(2,2) $\vee$ W(1,1)
+
+#### Inferência
+Como provar que o Wumpus está em (1,3).
+1. **Modus Ponens:** ¬f(1,1) ($\alpha$) => ¬W(1,1) $\wedge$ ¬W(1,2) $\wedge$ ¬W(2,1) ($\beta$) - Se $\alpha$ for verdadeiro, então $\beta$ tem que ser verdade;
+2. **E-eliminação:** Com base no Modus Pnens, ¬W(1,1), ¬W(1,2), ¬W(2,1) é verdade
+	Fatos: ¬f(1,1), ¬b(1,1), ¬f(2,1), b(2,1), f(1,2), ¬b(1,2), ¬W(1,1), ¬W(1,2), ¬W(2,1)
+3. **Modus Ponens:**  ¬f(2,1) ($\alpha$) => ¬W(1,1) $\wedge$ ¬W(2,1) $\wedge$ ¬W(2,2) $\wedge$ ¬W(3,1) ($\beta$)
+4. **E-eliminação:** Com base no Modus Ponens, ¬W(1,1), ¬W(2,1), ¬W(2,2), ¬W(3,1)
+	Fatos: ¬f(1,1), ¬b(1,1), ¬f(2,1), b(2,1), f(1,2), ¬b(1,2), ¬W(1,1), ¬W(1,2), ¬W(2,1), ¬W(3,1)
+5. **Modus Ponens:** f(1,2) ($\alpha$) => W(1,3) $\vee$ W(1,2) $\vee$ W(2,2) $\vee$ W(1,1) ($\beta$)
+6. **Resolução Unidade:** ($\alpha$) W(1,3) $\vee$ W(1,2) $\vee$ W(2,2) $\vee$ ($\beta$) W(1,1) só que ¬W(1,1) é verdade, logo Wumpus não está em (1, 1)
+7. **Resolução Unidade:** ($\alpha$) W(1,3) $\vee$ W(1,2) $\vee$ ($\beta$) W(2,2) só que ¬W(2,2) é verdade, logo Wumpus não está em (2,2)
+8. **Resolução Unidade:** ($\alpha$) W(1,3) $\vee$ ($\beta$) W(1,2) só que ¬W(1, 2) é verdade, logo Wumpus está em W(1, 3)
+
