--- a/Banco de Dados/6. AQL.md
+++ b/Banco de Dados/6. AQL.md
@@ -28,15 +28,63 @@ Para que o [[5. SQL]] faça uma Select similar ao AQL, teria de usar o SELECT DI
 ![[Pasted image 20250603153035.png]]
 
 # Operações comuns
+Só podem acontecer operações caso os dominios sejam os mesmo. Se uma tabela tem uma coluna com varchar() a outra tabela tem que ter uma coluna varchar() também para realizar as operações
 ## União
 $$ R \cup S $$
 A união R e S, é o conjunto de elementos em R ou S ou em ambos, excluindo linhas duplicadas.
-
+**Exemplo:**
+![[Pasted image 20250605141254.png]]
 ## Intersection
 $$ R \cap S $$
 A interseção de R e S, é o conjunto de elementos que esteja presente em ambos as tabelas R e S.
+**Exemplo:**
+![[Pasted image 20250605141324.png]]
 
 ## Difference
 $$ R - S $$
 A diferença de R e S, é o conjunto de elementos que esteja em R e não esteja em S.
+**Exemplo:**
+![[Pasted image 20250605141344.png]]
 
+## Produto cartesiano
+$$ R X S $$
+Combina os atributos de duas tabelas.
+**Exemplo:**
+![[Pasted image 20250605141508.png]]
+
+Um produto cartesiano nunca deve vir sozinho, normalmente ele deve ser combinado com uma [[#Selection]]. É principalmente combinado uma PK com uma FK.
+**Exemplo 2:**
+![[Pasted image 20250605141602.png]]
+Deve haver a combinação da PK da coluna Agent com a FK da coluna Costumer.
+
+## Join
+A função do join é juntar dados de duas tabelas.
+### Natural Join
+![[Pasted image 20250605142216.png]]
+As colunas em que o Join é feito, há a unificação das colunas em uma unica coluna. Ele junta automáticamente as PK e FK das tabelas. Apenas o [[#Natural Join]] pode unir as colunas em uma.
+
+**Exemplo:**
+![[Pasted image 20250605142346.png]]
+
+### Theta Join
+![[Pasted image 20250605142758.png]]
+É um Join que tem uma condição para realização a junção. O [[#Theta Join]] funciona como um produto cartesiano, ou seja, se tiverem colunas iguais em tabelas diferentes, deve referenciar a qual tabela aquela coluna pertence.
+
+**Exemplo:**
+![[Pasted image 20250605142845.png]]
+
+
+### Inner Join
+
+### Other Join
+
+## Renomeação
+![[Pasted image 20250605143550.png]]
+É o processo de renomear uma relação
+
+**Exemplo:**
+![[Pasted image 20250605143622.png]]
+Nessa renomeação, está sendo renomeada a coluna B de S para X.
+
+# Exercicio
+![[Pasted image 20250605151801.png]]
