--- a/Introdução a Inteligência Artificial/9. Logica Proposicional.md
+++ b/Introdução a Inteligência Artificial/9. Logica Proposicional.md
@@ -31,7 +31,7 @@ Este modelo é de um **Agente baseado em Busca**. É eficiente na solução de p
 Contudo, não resolvem problemas que exigem raciocínio baseado em conhecimentos do mundo.
 
 #### Metaregra
-São regras gerais criadas pelo ser humano por meio de proposições lógicas
+São regras gerais criadas pelo ser humano por meio de proposições lógicas. Esse modelo não segue a BNF (Backus–Naur form), que  é um modelo de linguagem formal usada para representar expressões em linguagem de programação.
 - **Modus Ponens:** $\frac{\alpha => \beta, \alpha}{\beta}$ (Se $\alpha$ implica em $\beta$ e $\alpha$ é verdadeira, então $\beta$ é verdadeira)
 - **E-eliminação:** $\frac{\alpha 1 \wedge \alpha 2 \wedge ... \wedge \alpha n}{\alpha i}$ (Se $\alpha 1$ e $\alpha 2$ e ... e $\alpha n$ é verdade, então $\alpha i$ é verdade)
 - **Resolução Unidade:** $\frac{\alpha \vee \beta, ¬\beta}{\alpha}$ (Se $\alpha  \vee  \beta$ é verdade e $¬\beta$ também é verdade, então $\alpha$ é verdade)
