--- a/Sistemas da Informação/3. Processos de Requisitos.md
+++ b/Sistemas da Informação/3. Processos de Requisitos.md
@@ -360,3 +360,65 @@ Nesse modelo, a **Goal** - contribui -> **Feature** - define -> **Requisito** - 
 
 ## Observação
 ![[Pasted image 20250605112410.png]]
+# [[#Validação]]
+É uma etapa interativa.
+**Objetivos:**
+	Detalhar e corrigir defeito nos detalhes dos requisitos
+**Resultados:**
+	Encontrar falhas nos requisitos e melhorar a formulação desses requisitos.
+
+O custo de dos defeitos cresce exponencialmente a medida que evolui as etapas de desenvolvimento. Na etapa de elaboração de requisitos, o custo de correção do erro é muito menor do que na etapa de teste por exemplo.
+
+## Especificações dos requisitos
+Independente do **tamanho** da especificação, deve ser respondida duas perguntas:
+	Foi definidos os requisitos corretos?
+	Foi definido de forma correta os requisitos?
+
+### Target Collects
+- **As especificações sevem seguir alguns critérios**
+
+| completo               | Suficient para satisfazer um objetivo de um dominio        |
+| ---------------------- | ---------------------------------------------------------- |
+| **Consistente**        | **Não contradiz um com o outro**                           |
+| **Relevante**          | Contribuio para concordar com os objetivo dos stakeholders |
+| **Fazivel**            |                                                            |
+| **De Custo eficiente** |                                                            |
+
+- **Os requisitos foram definidos de forma correta:**
+
+| Preciso                    | Não é ambiguo ou subjetivo para uma falha de interpretação                      |
+| -------------------------- | ------------------------------------------------------------------------------- |
+| **Claro**                  | **facil de compreender para os desenvolvedores e stakeholders**                 |
+| **Testavel**               | **Pode ser testado de forma que eu consiga observar o meu sistema em execução** |
+| **Livre de interpretação** | **Define uma visibilidade externa das qualidades**                              |
+
+- **As especificações deve ter:**
+
+| Inteligivel       | Os objetivos do sistema devem ser claros |
+| ----------------- | ---------------------------------------- |
+| **Boa estrutura** | **Informação é fácil de encontra**       |
+| **Manentenível**  | **Informação é fácil de atualizar**      |
+
+- **Fatos sobre requisitos:**
+	Requisitos nunca serão perfeitos
+		Se os requisitos atingirem as [[#Target Collects]], ele já está bom o suficiente.
+	Mesmo que os requisitos sejam vagos, o código será preciso
+		O código fará o que for mandado ser feito, mesmo que não seja condizente com o que deveria ser entregue.
+
+### Completude dos Requisitos
+A ideia é verificar a probabilidade de que os desenvolvedores não compreendam os requisitos
+Qual a consequência dessa não compreensão da corretude do requisito.
+
+### Corrigindo requisitos
+#### Requirement Reviews
+- **Lightweight:**
+	Escrito os requisitos e envia para os stakeholders, desenvolvedores para revisão
+	Os requisitos são apresentados para feedbacks durante uma reunião.
+- **Formal gatekeeping:**
+	Requisitos revisados e aprovados depois da implementação
+	Engenheiros Seniores e experts de domínios verificam de forma critica analisando: Legibilidade, segurança, privacidade, performance, suporte operacional, etc.
+
+#### Tipos de checklists
+- Genéricos para definição de qualidade dos requisitos
+- Para categorias de requisitos específicos
+- Para especificações de domínio
