Adicionando notas de IIA

--- a/Introdução a Inteligência Artificial/5. Redes Neurais.md
+++ b/Introdução a Inteligência Artificial/5. Redes Neurais.md
@@ -46,7 +46,7 @@ A partir desse próximo caso, é utilizado o mesmo valor peso encontrado para ca
 # Arquitetura RNA
 Adotam-se **Portas de limiar** para calcular se a saída está correta ou não
 ![[Pasted image 20250430145334.png]]
-**O beneficio da Equação de Sgmoidal é por ser uma equação facil de derivar**
+**O beneficio da Equação de Sigmoidal é por ser uma equação facil de derivar**
 ## Regras de aprendizado
 ### Regra de Hebb:
 ![[Pasted image 20250505141028.png]]
