--- a/Sistemas da Informação/3. Processos de Requisitos.md
+++ b/Sistemas da Informação/3. Processos de Requisitos.md
@@ -377,12 +377,12 @@ Independente do **tamanho** da especificação, deve ser respondida duas pergunt
 ### Target Collects
 - **As especificações sevem seguir alguns critérios**
 
-| completo               | Suficient para satisfazer um objetivo de um dominio        |
-| ---------------------- | ---------------------------------------------------------- |
-| **Consistente**        | **Não contradiz um com o outro**                           |
-| **Relevante**          | Contribuio para concordar com os objetivo dos stakeholders |
-| **Fazivel**            |                                                            |
-| **De Custo eficiente** |                                                            |
+| completo               | Suficient para satisfazer um objetivo de um dominio            |
+| ---------------------- | -------------------------------------------------------------- |
+| **Consistente**        | **Não contradiz um com o outro**                               |
+| **Relevante**          | **Contribuio para concordar com os objetivo dos stakeholders** |
+| **Fazivel**            |                                                                |
+| **De Custo eficiente** |                                                                |
 
 - **Os requisitos foram definidos de forma correta:**
 
