--- a/Introdução a Inteligência Artificial/10. Lógica de Predicados.md
+++ b/Introdução a Inteligência Artificial/10. Lógica de Predicados.md
@@ -3,10 +3,10 @@
 - $\exists$ - Existe
 
 **Exemplo:**
-1. $\forall (X) \neg P \equiv \neg\exists(X) P$: Todo quadrado não em 5 lados, nem todo quadrado não tem 5 lados.
+1. $\forall (X) \neg P \equiv \neg\exists(X) P$: Todo quadrado não tem 5 lados, não exite quadrado que tem 5 lados.
 2. $\neg\forall (X) P \equiv \exists (x) \neg P$: Nem todo aluno de CIC é de Ciência da Computação, então existe pelo menos um estudante que de CIC que não é de Ciência da Computação.
 3. $\forall (X) P \equiv \neg\exists (X) \neg P$: Todo angulo reto é de 90 graus, nem todo angulo reto não tem 90 graus.
-4. $\exists (X) P \equiv \neg\forall (X) \neg P$: Pelo menos uma pessoa na aula de IIA que fala chinês, não são todos na sala de IIA que falam chinês.
+4. $\exists (X) P \equiv \neg\forall (X) \neg P$: Existe pelo menos uma pessoa na aula de IIA que fala chinês, não são todos na sala de IIA que não falam chinês.
 5. $\neg P \wedge \neg Q \equiv \neg (P \vee Q)$: Não gosto de café e não gosto de chá, então não gosto de café ou chá.
 6. $\neg (P \wedge Q) \equiv \neg P \vee \neg Q$: Não gosto de chocolate e café, logo não gosto de chocolate ou não gosto de café.
 7. $P \wedge Q \equiv \neg ( \neg P \vee \neg Q)$: 
@@ -18,4 +18,4 @@
 - João possui um cachorro => $\exists X \ cachorro(X) \wedge Possui(João,X)$ 
 - Quem possui um cachorro é amigo dos animais => $\forall X (\exists Y \ cachorro (Y) \wedge Possui (X, Y) \rightarrow AmigoAnimais(X))$
 - Quem ama os animais não mata animais => $\forall X \ AmigoAnimais(X) \rightarrow \forall Y \ Animais(Y) \rightarrow \neg matar(X, Y)$
-- X é neto de Z => $\forall X, Z \ Neto(Y, X) \leftrightarrow \exists Y \ Mãe(Z, Y) \wedge Pai (X, Y)$ 
+- X é neto de Z => $\forall X, Z \ Neto(X, Z) \leftrightarrow \exists Y \ Mãe(Z, Y) \wedge Pai (X, Y)$ 
